<resources>
    <string name="app_name">Biller</string>
    <string name="todo">TODO</string>
    <string name="biller">BILLER</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="gst_number">GST Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="get_otp">Get OTP</string>
    <string name="number">Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="item_name">Item Name</string>
    <string name="item_name1">Name :</string>
    <string name="price">Price</string>
    <string name="bprice">Purchase Price</string>
    <string name="sprice">Selling Price</string>
    <string name="catagory">Category</string>
    <string name="quantity">Quantity</string>
    <string name="add_products">Add Products</string>
    <string name="show_list">Show List</string>
    <string name="add_item">Add Item</string>
    <string name="search_by_customer_name">Search Customer</string>
    <string name="customers">Customers</string>
    <string name="search_by_contact_number">Search By Contact Number</string>
    <string name="search_date_or_start_range">Search Date or Start Range</string>
    <string name="end_of_date">End of Date</string>
    <string name="search_by_billid">Search By BillID</string>
    <string name="search">Search</string>
    <string name="show_all_customers">Show All Customers</string>
    <string name="download_pdf">Download PDF</string>
    <string name="update">Update</string>
    <string name="show">Show</string>
    <string name="delete">Delete</string>
    <string name="enter_customer_information">Enter Customer Information</string>
    <string name="date">date</string>
    <string name="enter_products">Enter Products</string>
    <string name="permision_request">Permision_Request</string>
    <string name="display">display</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="addmore">AddMore</string>
    <string name="create_pdf">Create PDF</string>
    <string name="Menulogo">menu</string>
    <string name="item_price">Price :</string>
    <string name="item_quantity">Quantity :</string>
    <string name="subtotal">Subtotal :</string>
    <string name="customer_information">Bill Management</string>
    <string name="about">About</string>
    <string name="edit_information">Profile Editing</string>
    <string name="backup">Backup Management</string>
    <string name="stock">Stock Control</string>
    <string name="viewS">View Stock</string>
    <string name="addS">Add Stock</string>
    <string name="gemini_feature">Gemini Feature</string>
    <string name="total_used_token">Total used token:</string>
    <string name="counting">Counting...</string>
    <string name="understand_customer">Understand Customer</string>
    <string name="token_count">Token Count</string>
    <string name="analyze_stock">Analyze Stock</string>
    <string name="business_insights">Business Insights</string>
    <string name="submit">Submit</string>
    <string name="enter_api_key">Enter API key</string>
    <string name="gst">Gst:</string>
    <string name="decrease_product_count">Decrease product count</string>
    <string name="increase_product_count">Increase product count</string>
    <string name="gst_percentage">GST percentage</string>
    <string name="local_backup_managment">Local Backup Managment</string>
    <string name="not_uploaded">Not Uploaded</string>
    <string name="last_upload">Last Upload :</string>
    <string name="not_downloaded">Not Downloaded</string>
    <string name="last_download">Last Download :</string>
    <string name="download">Download</string>
    <string name="upload_data">Upload Data</string>
    <string name="enhanced_by">Enhanced by :</string>
    <string name="upload_backup_file">Upload Backup File</string>
    <string name="fingerprint_login">FingerPrint Login</string>
    <string name="demo_login">Demo Login</string>
    <string name="chart">Chart</string>
    <string name="current_stock_status">current Stock Status</string>
    <string name="go_back">Go Back</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="continue_previous_chat">Continue previous chat</string>
    <string name="select_gemini_model">Select Gemini Model :</string>
    <string name="product">Product</string>
    <string name="switch_search">Switch Search</string>
    <string name="category">Category</string>
    <string name="enter_category_name">Enter Category name</string>
    <string name="switch_record">switch Record</string>
    <string name="sales">Sales</string>
    <string name="quantity_chart">Quantity chart</string>
    <string name="show_record">Show Record</string>
    <string name="ai_message">AI message</string>
    <string name="user_message">User message</string>
    <string name="inventory_insights">Inventory Insights</string>
    <string name="log_out">Log Out</string>
    <string name="fingerprint_unlock">Fingerprint unlock:</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp_in">Resend OTP in :</string>
    <string name="_1_00">1:00</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="records">Records</string>
    <string name="_0">0</string>
    <string name="i_have_gst_number">I have GST number</string>
    <string name="check_total">Check Total</string>
    <string name="loading">Loading</string>
</resources>