<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Additems">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar">

    </include>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stock"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutitemname"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="10dp"
        android:hint="@string/item_name"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#FF002E"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:prefixTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_shopping_bag_24">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/itemNameedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="#FA0202"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/catagoryLay"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/catagory"
        android:textColorHint="@color/white"
        app:helperTextTextColor="#FF002E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutitemname"
        app:prefixTextColor="@color/white"
        app:startIconDrawable="@drawable/baseline_category_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#FA0202" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/bprice"
        android:textColorHint="@color/white"
        app:helperTextTextColor="#FF002E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catagoryLay"
        app:prefixTextColor="@color/white"
        app:startIconDrawable="@drawable/baseline_currency_rupee_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/porchesPriceEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#FA0202" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sP"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/sprice"
        android:textColorHint="@color/white"
        app:helperTextTextColor="#FF002E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        app:prefixTextColor="@color/white"
        app:startIconDrawable="@drawable/baseline_sell_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sellPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#FA0202" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:hint="@string/date"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sP"
        app:startIconDrawable="@drawable/date"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PurchesDate"
            android:textColor="@color/white"
            android:textColorHint="#FA0202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLength="10"
            android:text=""
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutQuantity"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/quantity"
        android:textColorHint="@color/white"
        app:helperTextTextColor="#FF002E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        app:prefixTextColor="@color/white"
        app:startIconDrawable="@drawable/baseline_warehouse_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#FA0202" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/VStock"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewS"
        app:layout_constraintStart_toStartOf="@+id/layoutQuantity"
        app:layout_constraintTop_toBottomOf="@+id/layoutQuantity" />

    <Button
        android:id="@+id/AItem"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addS"
        app:layout_constraintEnd_toEndOf="@+id/layoutQuantity"
        app:layout_constraintTop_toBottomOf="@+id/layoutQuantity" />

    <!--    <Button-->
    <!--        android:id="@+id/show"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:text="@string/show_list"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/layoutQuantity"-->
    <!--        tools:ignore="TextContrastCheck" />-->


</androidx.constraintlayout.widget.ConstraintLayout>